--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#tabs">Stories Videos</a></li>
             <li><a href="#services">Stories sounds</a></li>
-            <li><a href="#features">Stories Books</a></li>
-            <li><a href="#Games">Games</a></li>
+            <li><a href="#story-tabs">Stories Books</a></li>
+            <li><a href="#tabs1">Games</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -813,7 +813,7 @@
           <div class="icon mb-2">
             <i class="bi bi-music-note-beamed fs-2"></i>
           </div>
-          <h3>high English</h3>
+          <h3>Elementary English Story</h3>
 
           <div class="audio-wave mt-2 mb-2">
             <div class="wave"></div>
@@ -869,6 +869,127 @@ for (let i = 1; i <= 6; i++) {
 </script>
 
 <!-- End Book section -->
+<section id="story-tabs" class="section py-5 bg-light">
+  <div class="container section-title text-center mb-4" data-aos="fade-up">
+    <h2>Our Story</h2>
+    <div>
+      <span>Watch in your</span>
+      <span class="description-title">Level</span>
+    </div>
+  </div>
+
+  <div class="container" data-aos="fade-up">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs justify-content-center mb-4" id="storyTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Elementary Arabic</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Elementary English</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab">Middle Arabic</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab">Middle English</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab">High Arabic</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6" type="button" role="tab">High English</button>
+      </li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content p-4 border border-top-0 rounded-bottom bg-white shadow-sm">
+      <!-- Tab 1 -->
+      <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+        <div style="width: 100%;">
+          <a href="https://online.flippingbook.com/view/227887302/" class="fbo-embed" data-fbo-id="19bc7fc9c7" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Elementary School Level ARABIC</a>
+          <script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=227887302"></script>
+        </div>
+      </div>
+
+      <!-- Tab 2 -->
+      <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+        <div style="width: 100%;">
+          <a href="https://online.flippingbook.com/view/228063338/" class="fbo-embed" data-fbo-id="539db7c774" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Eelementary_School_Level story_eng</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228063338"></script>
+        </div>
+      </div>
+
+      <!-- Tab 3 -->
+      <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+        <div style="width: 100%;">
+<a href="https://online.flippingbook.com/view/228001878/" class="fbo-embed" data-fbo-id="d8405ab4f2" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Middle School Level Arabic</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228001878"></script>        </div>
+      </div>
+
+      <!-- Tab 4 -->
+      <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+        <div style="width: 100%;">
+<a href="https://online.flippingbook.com/view/228175871/" class="fbo-embed" data-fbo-id="13bda76e7d" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Middle_School_Level_story eng</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228175871"></script>        </div>
+      </div>
+
+      <!-- Tab 5 -->
+      <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+        <div style="width: 100%;">
+<a href="https://online.flippingbook.com/view/228071313/" class="fbo-embed" data-fbo-id="b5145917c8" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228071313"></script>        </div>
+      </div>
+
+      <!-- Tab 6 -->
+      <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
+        <div style="width: 100%;">
+<a href="https://online.flippingbook.com/view/228304765/" class="fbo-embed" data-fbo-id="f57e726ca6" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228304765"></script>        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- section games -->
+
+<section id="tabs1" class="tabs-section section py-5 bg-light">
+  <div class="container section-title text-center mb-1" data-aos="fade-up">
+    <h2>Let's Play</h2>
+    <div>
+      <span>Choose your games </span>
+      <span class="description-title">to play</span>
+    </div>
+  </div>
+
+  <div class="container" data-aos="fade-up">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs justify-content-center mb-4" id="serviceTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="english-tab" data-bs-toggle="tab" data-bs-target="#english" type="button" role="tab">
+          Elementary level
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="arabic-tab" data-bs-toggle="tab" data-bs-target="#arabic" type="button" role="tab">
+          Middle Level
+        </button>
+      </li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content p-4 border border-top-0 rounded-bottom bg-white shadow-sm">
+      
+      <!-- Elementary English -->
+      <div class="tab-pane fade show active" id="english" role="tabpanel" aria-labelledby="english-tab">
+<div style="width: 100%;"><div style="position: relative; padding-bottom: 177.78%; padding-top: 0; height: 0;"><iframe title="Flara: The Solar Flare Who Visits OmanQuiz" frameborder="0" width="360" height="640" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/68e143438b230aeaa79e30bb" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>      </div>
+
+      <!-- Elementary Arabic -->
+      <div class="tab-pane fade" id="arabic" role="tabpanel" aria-labelledby="arabic-tab">
+        <div style="width: 100%;">
+         <div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="Galaxy Quiz" frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/68e1504cb3cda70d0af00fba" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 <!-- End Games section -->
 
       <!-- Contact Section -->
@@ -944,7 +1065,10 @@ for (let i = 1; i <= 6; i++) {
 </section>
 
             <!-- End Contact Form -->
-        
+          </div>
+        </div>
+      </section>
+      <!-- /Contact Section -->
     </main>
 
     <footer id="footer" class="footer light-background">
