--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <!-- <h3>Unleashing Potential with Creative Strategy</h3> -->
              <div class="p-4 bg-light rounded shadow-sm">
   <p class="mb-2 fw-semibold text-primary">
-    I’m Flara, a solar flare bringing light and inspiration to learning.
+    We are AlTakweenAstroCreators Team,
   </p>
   <p class="mb-2">
     Our <span class="fw-semibold">ICT advisor</span> has <span class="text-primary">20+ years</span> in <span class="fw-semibold">edtech</span>, specializing in <span class="fw-semibold">AI, STEM,</span> and <span class="fw-semibold">digital innovation</span>.
