--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <!-- <h3>Unleashing Potential with Creative Strategy</h3> -->
              <div class="p-4 bg-light rounded shadow-sm">
   <p class="mb-2 fw-semibold text-primary">
-    We are AlTakweenAstroCreators Team,
+    We are AlTakweenAstroCreators Team.
   </p>
   <p class="mb-2">
     Our <span class="fw-semibold">ICT advisor</span> has <span class="text-primary">20+ years</span> in <span class="fw-semibold">edtech</span>, specializing in <span class="fw-semibold">AI, STEM,</span> and <span class="fw-semibold">digital innovation</span>.
@@ -493,29 +493,25 @@
       </div>
 
       <div class="tab-pane fade" id="resources" role="tabpanel" aria-labelledby="resources-tab">
-        <div class="text-center mb-3">
-          <video class="video-square" controls>
-            <source src="assets/videos/video4.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-      </div>
-
-      <div class="tab-pane fade" id="primary" role="tabpanel" aria-labelledby="primary-tab">
-        <div class="text-center mb-3">
-          <iframe class="video-square" src="https://www.youtube.com/embed/ZK2iVeoXRkI" title="Primary School Video" frameborder="0" allowfullscreen></iframe>
-          <div class="mt-2">
-            <a href="https://www.youtube.com/watch?v=ZK2iVeoXRkI" target="_blank" class="btn btn-primary btn-lg">
+         <div class="text-center mb-3">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8ikJON1P-PI?si=lPXORf-88KlrG2sU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            <a href="https://www.youtube.com/embed/8ikJON1P-PI?si=lPXORf-88KlrG2sU" target="_blank" class="btn btn-primary btn-lg">
               <i class="bi bi-youtube me-2"></i> Watch Video on YouTube
             </a>
           </div>
         </div>
       </div>
 
+      <div class="tab-pane fade" id="primary" role="tabpanel" aria-labelledby="primary-tab">
+        <div class="text-center mb-3">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8ikJON1P-PI?si=lPXORf-88KlrG2sU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            <a href="https://www.youtube.com/embed/8ikJON1P-PI?si=lPXORf-88KlrG2sU" target="_blank" class="btn btn-primary btn-lg">
+              <i class="bi bi-youtube me-2"></i> Watch Video on YouTube
+            </a>
+          </div>
+      </div>
+
       <div class="tab-pane fade" id="middle" role="tabpanel" aria-labelledby="middle-tab">
         <div class="text-center mb-3">
-          <iframe class="video-square" src="https://www.youtube.com/embed/ZK2iVeoXRkI" title="Middle School Video" frameborder="0" allowfullscreen></iframe>
-          <div class="mt-2">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Xe7GU3kTcUY?si=LffALv35iQRJJkh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>          <div class="mt-2">
             <a href="https://www.youtube.com/watch?v=ZK2iVeoXRkI" target="_blank" class="btn btn-primary btn-lg">
               <i class="bi bi-youtube me-2"></i> Watch Video on YouTube
             </a>
@@ -939,8 +935,7 @@ for (let i = 1; i <= 6; i++) {
       <!-- Tab 6 -->
       <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
         <div style="width: 100%;">
-<a href="https://online.flippingbook.com/view/228304765/" class="fbo-embed" data-fbo-id="f57e726ca6" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228304765"></script>        </div>
-      </div>
+<a href="https://online.flippingbook.com/view/228083589/" class="fbo-embed" data-fbo-id="50eef50c40" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level engl</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228083589"></script>      </div>
 
     </div>
   </div>
