--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               <!-- <h3>Unleashing Potential with Creative Strategy</h3> -->
              <div class="p-4 bg-light rounded shadow-sm">
   <p class="mb-2 fw-semibold text-primary">
-    I’m Flara, a solar flare bringing light and inspiration to learning.
+   We are AlTakweenAStroCreators, we create Flara, a solar flare bringing light and inspiration to learning.
   </p>
   <p class="mb-2">
     Our <span class="fw-semibold">ICT advisor</span> has <span class="text-primary">20+ years</span> in <span class="fw-semibold">edtech</span>, specializing in <span class="fw-semibold">AI, STEM,</span> and <span class="fw-semibold">digital innovation</span>.
@@ -525,11 +525,27 @@
 
       <div class="tab-pane fade" id="advanced" role="tabpanel" aria-labelledby="advanced-tab">
         <div class="text-center mb-3">
-          <iframe class="video-square" src="https://www.youtube.com/embed/ZK2iVeoXRkI" title="Advanced Level Video" frameborder="0" allowfullscreen></iframe>
-          <div class="mt-2">
-            <a href="https://www.youtube.com/watch?v=ZK2iVeoXRkI" target="_blank" class="btn btn-primary btn-lg">
-              <i class="bi bi-youtube me-2"></i> Watch Video on YouTube
-            </a>
+        <div class="resources">
+  <p class="resource">Solar flare: <a href="https://science.nasa.gov/?search=solar+flare" target="_blank">NASA Science - Solar Flare</a></p>
+  <p class="resource"><a href="https://science.nasa.gov/heliophysics/" target="_blank">NASA Heliophysics</a></p>
+
+  <p class="resource">Space weather: <a href="https://spaceplace.nasa.gov/spaceweather/en/" target="_blank">NASA Space Place</a></p>
+  <p class="resource"><a href="https://www.swpc.noaa.gov/" target="_blank">NOAA Space Weather Prediction Center</a></p>
+  <p class="resource"><a href="https://www.weather.gov/media/nws/Results-of-the-First-National-Survey-of-User-Needs-for-Space-Weather-2024.pdf" target="_blank">National Survey of User Needs for Space Weather (PDF)</a></p>
+
+  <p class="resource">Earth magnetic shield: <a href="https://www.nasa.gov/solar-system/earth-and-moon-once-shared-a-magnetic-shield-protecting-their-atmospheres/" target="_blank">NASA - Earth & Moon Magnetic Shield</a></p>
+
+  <p class="resource">Space weather impact: <a href="https://www.swpc.noaa.gov/impacts" target="_blank">SWPC Impacts</a></p>
+  <p class="resource">Radio communication: <a href="https://www.swpc.noaa.gov/impacts/hf-radio-communications" target="_blank">HF Radio Communications</a></p>
+  <p class="resource">Space weather effects: <a href="https://www.spaceweather.gc.ca/tech/index-en.php#sat" target="_blank">Canadian Space Weather Effects</a></p>
+
+  <p class="resource">Solar flare affect Earth: <a href="https://svs.gsfc.nasa.gov/12640/#media_group_328547" target="_blank">NASA Solar Flare Effect on Earth</a></p>
+
+  <p class="resource">Kids resource: <a href="https://spaceplace.nasa.gov/menu/videos/" target="_blank">NASA Space Place Videos</a></p>
+
+  <p class="resource">CME: <a href="https://svs.gsfc.nasa.gov/10809/" target="_blank">NASA - Coronal Mass Ejection</a></p>
+</div>
+
           </div>
         </div>
       </div>
@@ -790,7 +806,7 @@
           <div class="icon mb-2">
             <i class="bi bi-music-note-beamed fs-2"></i>
           </div>
-          <h3>Hihg Arabic</h3>
+          <h3>High Arabic</h3>
 
           <div class="audio-wave mt-2 mb-2">
             <div class="wave"></div>
@@ -813,7 +829,7 @@
           <div class="icon mb-2">
             <i class="bi bi-music-note-beamed fs-2"></i>
           </div>
-          <h3>Elementary English Story</h3>
+          <h3>High English</h3>
 
           <div class="audio-wave mt-2 mb-2">
             <div class="wave"></div>
@@ -920,9 +936,7 @@ for (let i = 1; i <= 6; i++) {
 
       <!-- Tab 3 -->
       <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-        <div style="width: 100%;">
-<a href="https://online.flippingbook.com/view/228001878/" class="fbo-embed" data-fbo-id="d8405ab4f2" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">Middle School Level Arabic</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228001878"></script>        </div>
-      </div>
+        <a href="https://online.flippingbook.com/view/228083589/" class="fbo-embed" data-fbo-id="565320c48d" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level engl</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228083589"></script>
 
       <!-- Tab 4 -->
       <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
@@ -933,16 +947,12 @@ for (let i = 1; i <= 6; i++) {
       <!-- Tab 5 -->
       <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
         <div style="width: 100%;">
-<a href="https://online.flippingbook.com/view/228071313/" class="fbo-embed" data-fbo-id="b5145917c8" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228071313"></script>        </div>
-      </div>
+<a href="https://online.flippingbook.com/view/228071313/" class="fbo-embed" data-fbo-id="3088ef36ef" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228071313"></script>      </div>
 
       <!-- Tab 6 -->
       <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
         <div style="width: 100%;">
-<a href="https://online.flippingbook.com/view/228304765/" class="fbo-embed" data-fbo-id="f57e726ca6" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level ARABIC</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228304765"></script>        </div>
-      </div>
-
-    </div>
+<a href="https://online.flippingbook.com/view/228083589/" class="fbo-embed" data-fbo-id="565320c48d" data-fbo-ratio="3:2" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">High-School Level engl</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=228083589"></script>    </div>
   </div>
 </section>
 
